--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,15 +1,7 @@
-FROM python:3.7
-ENV PYTHONUNBUFFERED 1
-RUN apt-get update && apt-get install -y --no-install-recommends \
-        python3-setuptools \
-        python3-pip \
-        python3-dev \
-        python3-venv \
-        git \
-        && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
-
-EXPOSE 8000
-
-CMD python -c "print('hello world')"
+FROM python:3.8
+ENV PYTHONUNBUFFERED=1
+WORKDIR /django
+RUN apt-get update
+RUN apt install -y libgl1-mesa-glx
+COPY requirements.txt requirements.txt
+RUN pip3 install -r requirements.txt
