--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -5,6 +5,7 @@ beautifulsoup4==4.9.3
 certifi==2020.12.5
 chardet==4.0.0
 click==8.0.1
+dj-database-url==0.5.0
 Django==3.2.3
 django-debug-toolbar==3.2.1
 django-elasticsearch-dsl==7.2.0
@@ -19,6 +20,7 @@ elasticsearch-dsl==7.3.0
 Flask==2.0.1
 flask-restplus==0.13.0
 future==0.18.2
+gunicorn==20.1.0
 idna==2.10
 itsdangerous==2.0.1
 Jinja2==3.0.1
