--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - DEBUG=1
       - SECRET_KEY=samplesecret123
-      - ALLOWED_HOSTS=127.0.0.1,localhost
+      - ALLOWED_HOSTS=127.0.0.1,0.0.0.0
     networks:
       - elastic
   proxy:
